# game-of-life-demo

./: .gitignore  :w  README.md  flake.nix
wasm-game-of-life/: Cargo.toml  default.nix
wasm-game-of-life/src/: lib.rs
www/: index.html  index.js  styles.css
www/scripts/: shaders.js  webgl.js
www/wasm/: package.json  wasm_game_of_life.d.ts  wasm_game_of_life.js  wasm_game_of_life_bg.wasm  wasm_game_of_life_bg.wasm.d.ts
